--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:design:25.3.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'com.github.bumptech.glide:glide:3.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
+
 }
 repositories {
     mavenCentral()
